fix custom selection overlapping issue

--- a/assets/sass/material/_selection-control.scss
+++ b/assets/sass/material/_selection-control.scss
@@ -41,6 +41,7 @@
       left: 0;
     transition: all $transition-duration $transition-timing-function;
     width: ($selection-control-indicator-size * 2);
+    z-index: -1;
   }
   // active, focus, hover
     &:active::before {
