--- a/css/material.css
+++ b/css/material.css
@@ -4333,6 +4333,7 @@ button.list-group-item-warning:focus {
   -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   width: 48px;
+  z-index: -1;
 }
 .custom-control-indicator:active::before {
   opacity: 1;
